--- a/lightfm_evaluation/LightFM_evaluation_1000_slim.ipynb
+++ b/lightfm_evaluation/LightFM_evaluation_1000_slim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "9de13e68",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "0e39b2eb",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "id": "27182c8a",
    "metadata": {},
    "outputs": [],
@@ -79,70 +79,207 @@
    "id": "fc680d40",
    "metadata": {},
    "source": [
-    "## ABX (only popular)"
+    "## ABX utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "99c2eb19",
-   "metadata": {},
+   "execution_count": 30,
    "outputs": [],
+   "source": [
+    "def analyse_ABX(path, tsne = None, pca = None):\n",
+    "    abx_tests = pd.read_json(path, lines=True)\n",
+    "    A = np.zeros((10000, 100))\n",
+    "    B = np.zeros((10000, 100))\n",
+    "    X = np.zeros((10000, 100))\n",
+    "\n",
+    "    for i, test in tqdm(abx_tests.iterrows()):\n",
+    "        A[i, :] = items_embeddings.loc[test[\"A\"]]\n",
+    "        B[i, :] = items_embeddings.loc[test[\"B\"]]\n",
+    "        X[i, :] = items_embeddings.loc[test[\"X\"]]\n",
+    "\n",
+    "    dist_A = ((A - X)**2).sum(axis=1)\n",
+    "    dist_B = ((B - X)**2).sum(axis=1)\n",
+    "\n",
+    "    cos_dist_A = np.zeros(10000)\n",
+    "    cos_dist_B = np.zeros(10000)\n",
+    "\n",
+    "    for i in tqdm(range(10000)):\n",
+    "        cos_dist_A[i] = spatial.distance.cosine(A[i, :], X[i, :])\n",
+    "        cos_dist_B[i] = spatial.distance.cosine(B[i, :], X[i, :])\n",
+    "\n",
+    "    if pca is not None:\n",
+    "        pca_A = pca.transform(A)\n",
+    "        pca_B = pca.transform(B)\n",
+    "        pca_X = pca.transform(X)\n",
+    "\n",
+    "        dist_pca_A = ((pca_A - pca_X)**2).sum(axis=1)\n",
+    "        dist_pca_B  = ((pca_B - pca_X)**2).sum(axis=1)\n",
+    "\n",
+    "        cos_dist_pca_A = np.zeros(10000)\n",
+    "        cos_dist_pca_B = np.zeros(10000)\n",
+    "\n",
+    "        for i in tqdm(range(10000)):\n",
+    "            cos_dist_pca_A[i] = spatial.distance.cosine(pca_A[i, :], pca_X[i, :])\n",
+    "            cos_dist_pca_B[i] = spatial.distance.cosine(pca_B[i, :], pca_X[i, :])\n",
+    "\n",
+    "    if tsne is not None:\n",
+    "        tsne_A = np.zeros((10000, 2))\n",
+    "        tsne_B = np.zeros((10000, 2))\n",
+    "        tsne_X = np.zeros((10000, 2))\n",
+    "\n",
+    "        for i, test in tqdm(abx_tests.iterrows()):\n",
+    "            tsne_A[i, :] = tsne.loc[test[\"A\"]]\n",
+    "            tsne_B[i, :] = tsne.loc[test[\"B\"]]\n",
+    "            tsne_X[i, :] = tsne.loc[test[\"X\"]]\n",
+    "\n",
+    "\n",
+    "        dist_tsne_A = ((tsne_A - tsne_X)**2).sum(axis=1)\n",
+    "        dist_tsne_B  = ((tsne_B - tsne_X)**2).sum(axis=1)\n",
+    "\n",
+    "        cos_dist_tsne_A = np.zeros(10000)\n",
+    "        cos_dist_tsne_B = np.zeros(10000)\n",
+    "\n",
+    "        for i in tqdm(range(10000)):\n",
+    "            cos_dist_tsne_A[i] = spatial.distance.cosine(tsne_A[i, :], tsne_X[i, :])\n",
+    "            cos_dist_tsne_B[i] = spatial.distance.cosine(tsne_B[i, :], tsne_X[i, :])\n",
+    "\n",
+    "    print(\"Eucl:\")\n",
+    "    print(\"Score: \", (dist_A < dist_B).mean())\n",
+    "    if pca is not None:\n",
+    "        print(\"PCA score: \", (dist_pca_A < dist_pca_B).mean())\n",
+    "        print(\"PCA distance match: \", ((dist_A < dist_B) == (dist_pca_A < dist_pca_B)).mean())\n",
+    "    if tsne is not None:\n",
+    "        print(\"tSNE score: \", (dist_tsne_A < dist_tsne_B).mean())\n",
+    "        print(\"tSNE distance match: \", ((dist_A < dist_B) == (dist_tsne_A < dist_tsne_B)).mean())\n",
+    "\n",
+    "    print(\"Cos:\",)\n",
+    "    print(\"Score: \", (cos_dist_A < cos_dist_B).mean())\n",
+    "    if pca is not None:\n",
+    "        print(\"PCA score: \", (cos_dist_pca_A < cos_dist_pca_B).mean())\n",
+    "        print(\"PCA distance match: \", ((cos_dist_A < cos_dist_B) == (cos_dist_pca_A < cos_dist_pca_B)).mean())\n",
+    "    if tsne is not None:\n",
+    "        print(\"tSNE score: \", (cos_dist_tsne_A < cos_dist_tsne_B).mean())\n",
+    "        print(\"tSNE distance match: \", ((cos_dist_A < cos_dist_B) == (cos_dist_tsne_A < dist_tsne_B)).mean())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PCA(n_components=2)"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset = pd.read_pickle('/pio/scratch/1/i313924/data/lightfm_data/slim_dataset.pkl')\n",
     "\n",
     "item_mapping = {v: k for k, v in dataset.mapping()[2].items()}\n",
     "items_embeddings = pd.DataFrame(model.item_embeddings)\n",
-    "items_embeddings = items_embeddings.rename(index=item_mapping)"
-   ]
+    "items_embeddings = items_embeddings.rename(index=item_mapping)\n",
+    "\n",
+    "tsne = np.load('/pio/scratch/1/i313924/data/lightfm_data/tsne_embeddings_1000_epochs_slim.npy')\n",
+    "\n",
+    "tsne = pd.DataFrame(tsne)\n",
+    "tsne = tsne.rename(index=item_mapping)\n",
+    "\n",
+    "user_embeddings = pd.DataFrame(model.user_embeddings)\n",
+    "embeddings = pd.concat([items_embeddings, user_embeddings], keys=['items', 'users'])\n",
+    "pca = PCA(n_components=2)\n",
+    "pca.fit(embeddings)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "bac13c0d",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "abx_tests = pd.read_json('/pio/scratch/1/i313924/data/test_data/test_ABX_weighted_slim.json', lines=True)"
-   ]
+    "## ABX (only popular)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9cfd5d71",
+   "execution_count": 31,
+   "id": "bac13c0d",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": "0it [00:00, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34a65026bfc24846a0fdd971d99fe8e0",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0it [00:00, ?it/s]"
-      ]
+       "version_minor": 0,
+       "model_id": "e651021157ab41318ebd85cf25793ca5"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5278\n"
-     ]
     },
     {
      "data": {
+      "text/plain": "  0%|          | 0/10000 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d9458752bf84493bd77142612105bdd",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10000 [00:00<?, ?it/s]"
-      ]
+       "version_minor": 0,
+       "model_id": "b0e399a2e73644caa1b40cc13af28c55"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/10000 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "331366a0bef84a499be51688c4e341ed"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "826bd66755254d5db6680451b0eb95a0"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/10000 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "00fe1384801f4b5d89d84202c3070be2"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
@@ -151,33 +288,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5709\n"
+      "Eucl:\n",
+      "Score:  0.5278\n",
+      "PCA score:  0.5894\n",
+      "PCA distance match:  0.5624\n",
+      "tSNE score:  0.5937\n",
+      "tSNE distance match:  0.5621\n",
+      "Cos:\n",
+      "Score:  0.5709\n",
+      "PCA score:  0.5914\n",
+      "PCA distance match:  0.6489\n",
+      "tSNE score:  0.6001\n",
+      "tSNE distance match:  0.5717\n"
      ]
     }
    ],
    "source": [
-    "A = np.zeros((10000, 100))\n",
-    "B = np.zeros((10000, 100))\n",
-    "X = np.zeros((10000, 100))\n",
-    "\n",
-    "for i, test in tqdm(abx_tests.iterrows()):\n",
-    "    A[i, :] = items_embeddings.loc[test[\"A\"]]\n",
-    "    B[i, :] = items_embeddings.loc[test[\"B\"]]\n",
-    "    X[i, :] = items_embeddings.loc[test[\"X\"]]\n",
-    "\n",
-    "dist_A = ((A - X)**2).sum(axis=1)\n",
-    "dist_B = ((B - X)**2).sum(axis=1)\n",
-    "\n",
-    "print((dist_A < dist_B).mean())\n",
-    "\n",
-    "cos_dist_A = np.zeros(10000)\n",
-    "cos_dist_B = np.zeros(10000)\n",
-    "\n",
-    "for i in tqdm(range(10000)):\n",
-    "    cos_dist_A[i] = spatial.distance.cosine(A[i, :], X[i, :])\n",
-    "    cos_dist_B[i] = spatial.distance.cosine(B[i, :], X[i, :])\n",
-    "\n",
-    "print((cos_dist_A < cos_dist_B).mean())"
+    "analyse_ABX('/pio/scratch/1/i313924/data/test_data/test_ABX_weighted_slim.json', pca=pca, tsne=tsne)"
    ]
   },
   {
@@ -190,41 +317,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "fe5396e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": "0it [00:00, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62c31d2f20bc4691a8d52f0b968237f7",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "0it [00:00, ?it/s]"
-      ]
+       "version_minor": 0,
+       "model_id": "ac5c4d011a494d7891ce815444180c7b"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5124\n"
-     ]
     },
     {
      "data": {
+      "text/plain": "  0%|          | 0/10000 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3186718201e44834a8ef94cc76586f0c",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10000 [00:00<?, ?it/s]"
-      ]
+       "version_minor": 0,
+       "model_id": "5a6bdf6db0354a2ab4461ab129527a44"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/10000 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b8ce25271c2c4c99bdfe8c15a5309c36"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "ae190ad59b2c4956acca9dbc46471ec9"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/10000 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "ce24d1d3ed604c9ab6a4d84a6c699a90"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
@@ -233,35 +385,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5321\n"
+      "Eucl:\n",
+      "Score:  0.5124\n",
+      "PCA score:  0.542\n",
+      "PCA distance match:  0.5546\n",
+      "tSNE score:  0.5189\n",
+      "tSNE distance match:  0.5231\n",
+      "Cos:\n",
+      "Score:  0.5321\n",
+      "PCA score:  0.5408\n",
+      "PCA distance match:  0.6339\n",
+      "tSNE score:  0.5309\n",
+      "tSNE distance match:  0.5331\n"
      ]
     }
    ],
    "source": [
-    "abx_tests_sd = pd.read_json('/pio/scratch/1/i313924/data/test_data/Suits_Dresses_ABX.json', lines=True)\n",
-    "\n",
-    "A = np.zeros((10000, 100))\n",
-    "B = np.zeros((10000, 100))\n",
-    "X = np.zeros((10000, 100))\n",
-    "\n",
-    "for i, test in tqdm(abx_tests_sd.iterrows()):\n",
-    "    A[i, :] = items_embeddings.loc[test[\"A\"]]\n",
-    "    B[i, :] = items_embeddings.loc[test[\"B\"]]\n",
-    "    X[i, :] = items_embeddings.loc[test[\"X\"]]\n",
-    "\n",
-    "dist_A = ((A - X)**2).sum(axis=1)\n",
-    "dist_B = ((B - X)**2).sum(axis=1)\n",
-    "\n",
-    "print((dist_A < dist_B).mean())\n",
-    "\n",
-    "cos_dist_A = np.zeros(10000)\n",
-    "cos_dist_B = np.zeros(10000)\n",
-    "\n",
-    "for i in tqdm(range(10000)):\n",
-    "    cos_dist_A[i] = spatial.distance.cosine(A[i, :], X[i, :])\n",
-    "    cos_dist_B[i] = spatial.distance.cosine(B[i, :], X[i, :])\n",
-    "\n",
-    "print((cos_dist_A < cos_dist_B).mean())"
+    "analyse_ABX('/pio/scratch/1/i313924/data/test_data/Suits_Dresses_ABX.json', pca=pca, tsne=tsne)"
    ]
   },
   {
@@ -270,48 +410,6 @@
    "metadata": {},
    "source": [
     "## Embeddings PCA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "af50fd0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_embeddings = pd.DataFrame(model.user_embeddings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "1dbe0ff6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "embeddings = pd.concat([items_embeddings, user_embeddings], keys=['items', 'users'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "d9718b22",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PCA(n_components=2)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pca = PCA(n_components=2)\n",
-    "pca.fit(embeddings)"
    ]
   },
   {
@@ -1086,16 +1184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tsne = np.load('/pio/scratch/1/i313924/data/lightfm_data/tsne_embeddings_1000_epochs_slim.npy')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "3ccaef33",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "tsne = np.load('/pio/scratch/1/i313924/data/lightfm_data/tsne_embeddings_1000_epochs_slim.npy')\n",
     "dataset = pd.read_pickle('/pio/scratch/1/i313924/data/lightfm_data/slim_dataset.pkl')\n",
     "\n",
     "item_mapping = {v: k for k, v in dataset.mapping()[2].items()}\n",
