--- a/svd_evaluation/SVD_evaluation_1000_epochs_slim.ipynb
+++ b/svd_evaluation/SVD_evaluation_1000_epochs_slim.ipynb
@@ -2,28 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c67ba190",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib created a temporary config/cache directory at /tmp/matplotlib-ml363_0h because the default path (/home/i313924/.cache/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
-    "from sklearn.decomposition import PCA\n",
     "from scipy import spatial\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.metrics import mean_absolute_error\n",
     "from tqdm.auto import tqdm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('/pio/scratch/1/i313924/data/train_data/slim_ratings.csv',\n",
+    "                 names=['asin', 'reviewerID', 'overall', 'unixReviewTime'])\n",
+    "df = df.rename(columns={\"reviewerID\": \"u_id\", \"asin\": \"i_id\", \"overall\": \"rating\"})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -34,6 +42,44 @@
    "source": [
     "model = pd.read_pickle('/pio/scratch/1/i313924/data/svd_data/model_1000_epochs_slim.pkl')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "pred = model.predict(df)\n",
+    "mae = mean_absolute_error(df['rating'], pred)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.01951263975399876"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mae"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
