Evaluate regularized models

--- a/svd_evaluation/SVD_evaluation_1000_epochs_regularized.ipynb
+++ b/svd_evaluation/SVD_evaluation_1000_epochs_regularized.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def analyse_ABX(path, tsne = None, pca = None):\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "76fb7469",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "46c77d8385b34ad0b3c62de9851f10e8"
+       "model_id": "631ac7e3a22b4f7f817adc58bbcabccb"
       }
      },
      "metadata": {},
@@ -216,7 +216,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "155ae713fe5845aea32b5edf199a6ddb"
+       "model_id": "70dbdedf7fbc410c8efcae32eeac93e9"
       }
      },
      "metadata": {},
@@ -228,7 +228,31 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "8b2d6986ac7d440794481d33c850d325"
+       "model_id": "9dfe6b3370e3436db31ea929d2d31408"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "fda7bc382c784caa9cab5528ea26c9de"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/10000 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "5d9fd9c92eef4663a6f83a0ac347d6e2"
       }
      },
      "metadata": {},
@@ -240,22 +264,26 @@
      "text": [
       "Eucl:\n",
       "Score:  0.5052\n",
-      "PCA score:  0.5292\n",
-      "PCA distance match:  0.6052\n",
+      "PCA score:  0.5288\n",
+      "PCA distance match:  0.604\n",
+      "tSNE score:  0.5143\n",
+      "tSNE distance match:  0.5927\n",
       "Cos:\n",
       "Score:  0.5014\n",
-      "PCA score:  0.5273\n",
-      "PCA distance match:  0.5493\n"
+      "PCA score:  0.5249\n",
+      "PCA distance match:  0.5451\n",
+      "tSNE score:  0.5126\n",
+      "tSNE distance match:  0.5061\n"
      ]
     }
    ],
    "source": [
-    "analyse_ABX('/pio/scratch/1/i313924/data/test_data/test_ABX_weighted_slim.json', tsne = None, pca = pca)"
+    "analyse_ABX('/pio/scratch/1/i313924/data/test_data/test_ABX_weighted_slim.json', tsne = tsne, pca = pca)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
@@ -263,7 +291,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c58579ca0f3e45f09dd774f0306fe5b9"
+       "model_id": "f56ca0b46e024a2d9a7b1d0a8cc80218"
       }
      },
      "metadata": {},
@@ -275,7 +303,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "4192df4f4f8c4d8e866d105f0b065f42"
+       "model_id": "abe77365bae948488254f6e574d54aa6"
       }
      },
      "metadata": {},
@@ -287,7 +315,31 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ff27b57fff0b43afbfff43330f914594"
+       "model_id": "2c05d5a7f006466590c15e7c487212ee"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "857e952a19a94d158b1f59b6f182217d"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "  0%|          | 0/10000 [00:00<?, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "2fc03851a9c24db1bef68c9315f0fbcc"
       }
      },
      "metadata": {},
@@ -299,17 +351,21 @@
      "text": [
       "Eucl:\n",
       "Score:  0.5002\n",
-      "PCA score:  0.5191\n",
-      "PCA distance match:  0.6107\n",
+      "PCA score:  0.5192\n",
+      "PCA distance match:  0.6094\n",
+      "tSNE score:  0.5067\n",
+      "tSNE distance match:  0.5825\n",
       "Cos:\n",
       "Score:  0.5072\n",
-      "PCA score:  0.5176\n",
-      "PCA distance match:  0.5548\n"
+      "PCA score:  0.5141\n",
+      "PCA distance match:  0.5611\n",
+      "tSNE score:  0.4991\n",
+      "tSNE distance match:  0.5099\n"
      ]
     }
    ],
    "source": [
-    "analyse_ABX('/pio/scratch/1/i313924/data/test_data/Suits_Dresses_ABX.json', tsne = None, pca = pca)"
+    "analyse_ABX('/pio/scratch/1/i313924/data/test_data/Suits_Dresses_ABX.json', tsne = tsne, pca = pca)"
    ],
    "metadata": {
     "collapsed": false,
@@ -393,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "b1b7655d",
    "metadata": {},
    "outputs": [],
@@ -404,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "c6205a17",
    "metadata": {},
    "outputs": [
@@ -413,7 +469,7 @@
       "text/plain": "              0         1         2         3         4         5         6   \\\n0       0.149393  0.113666 -0.129029  0.048759 -0.002672  0.104361 -0.163491   \n1      -0.040476 -0.172574 -0.151021  0.037806 -0.104254  0.102069  0.132950   \n2      -0.126284 -0.230147  0.016212 -0.123529  0.159287 -0.262785  0.023575   \n3       0.034778  0.115375 -0.159168  0.160235  0.064622 -0.127149  0.069086   \n4       0.077244  0.105341 -0.070258  0.105837 -0.048648 -0.058266 -0.041699   \n...          ...       ...       ...       ...       ...       ...       ...   \n206491 -0.210755  0.115877 -0.018103  0.094163  0.113839  0.061496  0.085917   \n206492 -0.043650 -0.082347  0.035145 -0.107799  0.035754 -0.027371  0.055875   \n206493  0.137890 -0.005148  0.046959 -0.099081 -0.192472  0.012582 -0.064053   \n206494 -0.148218  0.137447 -0.124732 -0.068753  0.093350 -0.034842 -0.140372   \n206495 -0.009886 -0.044748  0.013219  0.098254  0.049014 -0.095231  0.047494   \n\n              7         8         9   ...        90        91        92  \\\n0      -0.040161  0.019470 -0.022390  ...  0.128132 -0.042954 -0.092720   \n1      -0.104080 -0.175726  0.023957  ... -0.073924  0.061887 -0.045006   \n2       0.077968  0.164683  0.252367  ...  0.127548 -0.108179 -0.059644   \n3      -0.057605  0.007293  0.099979  ...  0.094477  0.132071  0.111183   \n4      -0.055596 -0.163939  0.104182  ... -0.028838  0.203919  0.006130   \n...          ...       ...       ...  ...       ...       ...       ...   \n206491 -0.083447 -0.135113  0.071025  ... -0.017170 -0.095605  0.131412   \n206492 -0.188577 -0.101160  0.087843  ...  0.132498  0.023331  0.125943   \n206493 -0.026946  0.208267  0.034392  ...  0.107928  0.011103 -0.063176   \n206494  0.076600  0.128780  0.003132  ...  0.012795  0.135620 -0.100073   \n206495  0.068685  0.050976 -0.026649  ...  0.100426 -0.051428 -0.030526   \n\n              93        94        95        96        97        98        99  \n0      -0.053786 -0.149163  0.001591  0.012808  0.094926 -0.008355  0.060699  \n1      -0.169282  0.037037  0.128070  0.330427 -0.119964  0.153838 -0.048285  \n2       0.010145  0.317738  0.042354 -0.330321 -0.265635  0.042238 -0.250359  \n3       0.176230 -0.059571  0.279857 -0.017445 -0.248767  0.083292 -0.287604  \n4       0.022912  0.068051  0.027483 -0.064708  0.085191  0.058574 -0.010896  \n...          ...       ...       ...       ...       ...       ...       ...  \n206491 -0.004495  0.107774 -0.045333 -0.195532 -0.042150  0.139900 -0.046988  \n206492  0.015474  0.116377 -0.042483 -0.066688 -0.096229 -0.108148 -0.088905  \n206493  0.085777 -0.085683  0.146123 -0.029737  0.020841 -0.089570  0.024657  \n206494  0.041713  0.159904 -0.034360  0.020821 -0.045250  0.011858 -0.112839  \n206495 -0.085954 -0.094132 -0.019875  0.029548 -0.044821 -0.126926  0.257661  \n\n[206496 rows x 100 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n      <th>5</th>\n      <th>6</th>\n      <th>7</th>\n      <th>8</th>\n      <th>9</th>\n      <th>...</th>\n      <th>90</th>\n      <th>91</th>\n      <th>92</th>\n      <th>93</th>\n      <th>94</th>\n      <th>95</th>\n      <th>96</th>\n      <th>97</th>\n      <th>98</th>\n      <th>99</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.149393</td>\n      <td>0.113666</td>\n      <td>-0.129029</td>\n      <td>0.048759</td>\n      <td>-0.002672</td>\n      <td>0.104361</td>\n      <td>-0.163491</td>\n      <td>-0.040161</td>\n      <td>0.019470</td>\n      <td>-0.022390</td>\n      <td>...</td>\n      <td>0.128132</td>\n      <td>-0.042954</td>\n      <td>-0.092720</td>\n      <td>-0.053786</td>\n      <td>-0.149163</td>\n      <td>0.001591</td>\n      <td>0.012808</td>\n      <td>0.094926</td>\n      <td>-0.008355</td>\n      <td>0.060699</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-0.040476</td>\n      <td>-0.172574</td>\n      <td>-0.151021</td>\n      <td>0.037806</td>\n      <td>-0.104254</td>\n      <td>0.102069</td>\n      <td>0.132950</td>\n      <td>-0.104080</td>\n      <td>-0.175726</td>\n      <td>0.023957</td>\n      <td>...</td>\n      <td>-0.073924</td>\n      <td>0.061887</td>\n      <td>-0.045006</td>\n      <td>-0.169282</td>\n      <td>0.037037</td>\n      <td>0.128070</td>\n      <td>0.330427</td>\n      <td>-0.119964</td>\n      <td>0.153838</td>\n      <td>-0.048285</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-0.126284</td>\n      <td>-0.230147</td>\n      <td>0.016212</td>\n      <td>-0.123529</td>\n      <td>0.159287</td>\n      <td>-0.262785</td>\n      <td>0.023575</td>\n      <td>0.077968</td>\n      <td>0.164683</td>\n      <td>0.252367</td>\n      <td>...</td>\n      <td>0.127548</td>\n      <td>-0.108179</td>\n      <td>-0.059644</td>\n      <td>0.010145</td>\n      <td>0.317738</td>\n      <td>0.042354</td>\n      <td>-0.330321</td>\n      <td>-0.265635</td>\n      <td>0.042238</td>\n      <td>-0.250359</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.034778</td>\n      <td>0.115375</td>\n      <td>-0.159168</td>\n      <td>0.160235</td>\n      <td>0.064622</td>\n      <td>-0.127149</td>\n      <td>0.069086</td>\n      <td>-0.057605</td>\n      <td>0.007293</td>\n      <td>0.099979</td>\n      <td>...</td>\n      <td>0.094477</td>\n      <td>0.132071</td>\n      <td>0.111183</td>\n      <td>0.176230</td>\n      <td>-0.059571</td>\n      <td>0.279857</td>\n      <td>-0.017445</td>\n      <td>-0.248767</td>\n      <td>0.083292</td>\n      <td>-0.287604</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.077244</td>\n      <td>0.105341</td>\n      <td>-0.070258</td>\n      <td>0.105837</td>\n      <td>-0.048648</td>\n      <td>-0.058266</td>\n      <td>-0.041699</td>\n      <td>-0.055596</td>\n      <td>-0.163939</td>\n      <td>0.104182</td>\n      <td>...</td>\n      <td>-0.028838</td>\n      <td>0.203919</td>\n      <td>0.006130</td>\n      <td>0.022912</td>\n      <td>0.068051</td>\n      <td>0.027483</td>\n      <td>-0.064708</td>\n      <td>0.085191</td>\n      <td>0.058574</td>\n      <td>-0.010896</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>206491</th>\n      <td>-0.210755</td>\n      <td>0.115877</td>\n      <td>-0.018103</td>\n      <td>0.094163</td>\n      <td>0.113839</td>\n      <td>0.061496</td>\n      <td>0.085917</td>\n      <td>-0.083447</td>\n      <td>-0.135113</td>\n      <td>0.071025</td>\n      <td>...</td>\n      <td>-0.017170</td>\n      <td>-0.095605</td>\n      <td>0.131412</td>\n      <td>-0.004495</td>\n      <td>0.107774</td>\n      <td>-0.045333</td>\n      <td>-0.195532</td>\n      <td>-0.042150</td>\n      <td>0.139900</td>\n      <td>-0.046988</td>\n    </tr>\n    <tr>\n      <th>206492</th>\n      <td>-0.043650</td>\n      <td>-0.082347</td>\n      <td>0.035145</td>\n      <td>-0.107799</td>\n      <td>0.035754</td>\n      <td>-0.027371</td>\n      <td>0.055875</td>\n      <td>-0.188577</td>\n      <td>-0.101160</td>\n      <td>0.087843</td>\n      <td>...</td>\n      <td>0.132498</td>\n      <td>0.023331</td>\n      <td>0.125943</td>\n      <td>0.015474</td>\n      <td>0.116377</td>\n      <td>-0.042483</td>\n      <td>-0.066688</td>\n      <td>-0.096229</td>\n      <td>-0.108148</td>\n      <td>-0.088905</td>\n    </tr>\n    <tr>\n      <th>206493</th>\n      <td>0.137890</td>\n      <td>-0.005148</td>\n      <td>0.046959</td>\n      <td>-0.099081</td>\n      <td>-0.192472</td>\n      <td>0.012582</td>\n      <td>-0.064053</td>\n      <td>-0.026946</td>\n      <td>0.208267</td>\n      <td>0.034392</td>\n      <td>...</td>\n      <td>0.107928</td>\n      <td>0.011103</td>\n      <td>-0.063176</td>\n      <td>0.085777</td>\n      <td>-0.085683</td>\n      <td>0.146123</td>\n      <td>-0.029737</td>\n      <td>0.020841</td>\n      <td>-0.089570</td>\n      <td>0.024657</td>\n    </tr>\n    <tr>\n      <th>206494</th>\n      <td>-0.148218</td>\n      <td>0.137447</td>\n      <td>-0.124732</td>\n      <td>-0.068753</td>\n      <td>0.093350</td>\n      <td>-0.034842</td>\n      <td>-0.140372</td>\n      <td>0.076600</td>\n      <td>0.128780</td>\n      <td>0.003132</td>\n      <td>...</td>\n      <td>0.012795</td>\n      <td>0.135620</td>\n      <td>-0.100073</td>\n      <td>0.041713</td>\n      <td>0.159904</td>\n      <td>-0.034360</td>\n      <td>0.020821</td>\n      <td>-0.045250</td>\n      <td>0.011858</td>\n      <td>-0.112839</td>\n    </tr>\n    <tr>\n      <th>206495</th>\n      <td>-0.009886</td>\n      <td>-0.044748</td>\n      <td>0.013219</td>\n      <td>0.098254</td>\n      <td>0.049014</td>\n      <td>-0.095231</td>\n      <td>0.047494</td>\n      <td>0.068685</td>\n      <td>0.050976</td>\n      <td>-0.026649</td>\n      <td>...</td>\n      <td>0.100426</td>\n      <td>-0.051428</td>\n      <td>-0.030526</td>\n      <td>-0.085954</td>\n      <td>-0.094132</td>\n      <td>-0.019875</td>\n      <td>0.029548</td>\n      <td>-0.044821</td>\n      <td>-0.126926</td>\n      <td>0.257661</td>\n    </tr>\n  </tbody>\n</table>\n<p>206496 rows × 100 columns</p>\n</div>"
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "cf6b421f",
    "metadata": {},
    "outputs": [],
@@ -434,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "b7821422",
    "metadata": {},
    "outputs": [
@@ -442,7 +498,7 @@
      "data": {
       "text/plain": "PCA(n_components=2)"
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "categories = pd.read_json('/pio/scratch/1/recommender_systems/interim/Amazon/meta_Clothing_Shoes_and_Jewelry_categories.json', lines=True)\n",
@@ -633,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "tsne = pd.DataFrame(tsne)\n",
@@ -648,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "tsne = tsne.join(categories.set_index('asin'))\n",
