--- a/utils/ABX_preparation.ipynb
+++ b/utils/ABX_preparation.ipynb
@@ -38,22 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "5fbf8e2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "items_to_chose_from = np.load('/pio/scratch/1/recommender_systems/interim/word2vec/abx_tests_indices.npy', allow_pickle=True)"
+    "items_to_chose_from = np.load('/pio/scratch/1/recommender_systems/interim/ngcf/abx_test_indices.npy', allow_pickle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "d757daf4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# jaki rzad wielkości tego pliku?\n",
     "def prepare_test_file(categories, path, test_set_size = 10000,\n",
     "                      category_type = \"category_1\", weighted_sample = True,\n",
     "                      min_counts = 0, items_to_chose_from = None):\n",
@@ -102,27 +101,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "955b450b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [
     {
      "data": {
+      "text/plain": "  0%|          | 0/10000 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "995e784ad5804d24a225e7e267e8e707",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10000 [00:00<?, ?it/s]"
-      ]
+       "version_minor": 0,
+       "model_id": "8078954e4baf42b9b8462c545cef60b5"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
    "source": [
-    "prepare_test_file(categories, '/pio/scratch/1/recommender_systems/interim/ABX_tests/for_word2vec_2.json', category_type='category_1', test_set_size = 10000, items_to_chose_from = items_to_chose_from)"
+    "prepare_test_file(categories, '/pio/scratch/1/recommender_systems/interim/ABX_tests/for_ngcf.json', category_type='category_1', test_set_size = 10000, items_to_chose_from = items_to_chose_from)"
    ]
   },
   {
