Add new evaluations

--- a/utils/ABX_preparation.ipynb
+++ b/utils/ABX_preparation.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings = pd.read_parquet('/pio/scratch/1/recommender_systems/interim/Amazon/Clothing_Shoes_and_Jewelry_clean.parquet')\n",
+    "# ratings = pd.read_parquet('/pio/scratch/1/recommender_systems/interim/Amazon/Clothing_Shoes_and_Jewelry_clean.parquet')\n",
     "categories = pd.read_json('/pio/scratch/1/recommender_systems/interim/Amazon/meta_Clothing_Shoes_and_Jewelry_categories.json', lines=True)"
    ]
   },
@@ -38,17 +38,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5fbf8e2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "items_to_chose_from = np.load('/pio/scratch/1/recommender_systems/interim/ngcf/abx_test_indices.npy', allow_pickle=True)"
+    "# items_to_chose_from = np.load('/pio/scratch/1/recommender_systems/interim/ngcf/abx_test_indices.npy', allow_pickle=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "df_positive = pd.read_parquet('/pio/scratch/1/recommender_systems/processed/amazon-clothes/5-core/train.parquet')\n",
+    "df_negative = pd.read_parquet('/pio/scratch/1/recommender_systems/processed/amazon-clothes/5-core/negative_train.parquet')\n",
+    "df = pd.concat([df_positive, df_negative])\n",
+    "items_to_chose_from = df.asin.unique()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['B00AYQQAG8', 'B005OB0ULY', 'B000ARPN4G', ..., 'B01HF4AG3O',\n       'B01HF4AG0W', 'B01HF4AE7C'], dtype=object)"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items_to_chose_from"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "d757daf4",
    "metadata": {},
    "outputs": [],
@@ -101,13 +141,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "955b450b",
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -115,7 +151,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "8078954e4baf42b9b8462c545cef60b5"
+       "model_id": "1fb8eacf59ee4cb3ba988f14db4e1d80"
       }
      },
      "metadata": {},
@@ -123,7 +159,7 @@
     }
    ],
    "source": [
-    "prepare_test_file(categories, '/pio/scratch/1/recommender_systems/interim/ABX_tests/for_ngcf.json', category_type='category_1', test_set_size = 10000, items_to_chose_from = items_to_chose_from)"
+    "prepare_test_file(categories, '/pio/scratch/1/recommender_systems/interim/ABX_tests/5_core.json', category_type='category_1', test_set_size = 10000, items_to_chose_from = items_to_chose_from)"
    ]
   },
   {
